fix minor layout issue

--- a/static/stemp_abw/foundation/css/app.css
+++ b/static/stemp_abw/foundation/css/app.css
@@ -1559,7 +1559,7 @@ footer.map-footer {
   padding-left: 0;
   padding-right: 0; }
   #panel-energy .accordion-content {
-    padding-bottom: 2rem; }
+    padding-bottom: 1rem; }
   #panel-energy .accordion-title {
     height: 4rem; }
   #panel-energy .accordion-title--100 {
